# todo-api-poetry

./: pyproject.toml
src/: main.py  settings.py
src/core/: settings.py
src/database/: db.py
src/models/: todo.py
src/schemas/: TodoSchema.py
src/todo_api/todos/: create.py  read.py
src/util/: todo_crud.py
tests/: test_main.py
