[tool.poetry]
name = "todo-api"
version = "0.1.0"
description = ""
authors = ["Ahmed Siddiqui <aus1st@gmail.com>"]
readme = "README.md"
packages = [{include = "todo_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
python-dotenv = "^1.0.1"
sqlmodel = "^0.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
